--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="./assets/icons8-shop-96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ets-two</title>
     <script src="https://kit.fontawesome.com/835c3cff92.js" crossorigin="anonymous"></script>
